<resources>
    <string name="app_name">CLOVRS</string>
    <string name="edit_message">Username</string>
    <string name="password">Password</string>
    <string name="button_send">Login</string>
    <string name="register">Register</string>
    <string name="register_button">Register</string>
    <string name="accept_invite">Accept Invite</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="upload_media">Upload Media</string>
    <string name="manage_spaces">Manage Spaces</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="clovrs">CLOVRS</string>
    <string name="documents">Documents</string>
    <string name="attendees">Attendees</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="enter">Enter</string>
    <string name="invited_user">Invited User</string>
    <string name="document">Document</string>
    <string name="num_of_connected_users">Num of Connected Users</string>
    <string name="date_of_meeting">Date of Meeting</string>
    <string name="completed">Completed</string>
    <string name="meeting_name">Meeting Name</string>
    <string name="meeting_archive">Meeting Archive</string>
    <string name="upcoming_meetings">Upcoming Meetings</string>
    <string name="email_to_send_rest_link">Email to Send Rest Link</string>
    <string name="forgot_email_or_password">Forgot username or password?</string>
    <string name="user">User</string>
    <string name="action">Action</string>
    <string name="archived_actions">Archived Actions</string>
    <string name="meeting_details">Meeting Details</string>
    <string name="workspace_map">Workspace Map</string>
    <string name="avatar_settings">Avatar Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="about_clovrs">About Clovrs</string>
    <string-array name="face">
        <item>Face</item>
        <item>Face 1</item>
        <item>Face 2</item>
        <item>Face 3</item>
        <item>Face 4</item>
    </string-array>
    <string-array name="model">
        <item>Model</item>
        <item>Model 1</item>
        <item>Model 2</item>
        <item>Model 3</item>
        <item>Model 4</item>
    </string-array>
    <string-array name="outfit">
        <item>Outfit</item>
        <item>Outfit 1</item>
        <item>Outfit 2</item>
        <item>Outfit 3</item>
        <item>Outfit 4</item>
    </string-array>
    <string-array name="color">
        <item>Color</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Purple</item>
    </string-array>
    <string-array name="directory">
        <item>Root</item>
        <item>Child</item>
    </string-array>
    <string-array name="gender_array">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
