<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="com.groupn.clovrs2.MainMenu"
    android:textAlignment="center"
    android:useDefaultMargins="true"
    android:columnOrderPreserved="false"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:baselineAligned="true"
    android:measureWithLargestChild="false">

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_invite"
        android:drawableTop="@drawable/acccept_invitation"
        android:id="@+id/accept_invite"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:onClick="startAcceptInvite"
        android:padding="15dp"
        android:textSize="20sp"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_meeting"
        android:drawableTop="@drawable/add_meeting"
        android:id="@+id/create_meeting"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:padding="15dp"
        android:textSize="20sp"
        android:onClick="startCreateMeeting"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_media"
        android:drawableTop="@drawable/upload"
        android:id="@+id/upload_media"
        android:enabled="true"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:textSize="20sp"
        android:onClick="startUpload"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:drawableTop="@drawable/contact"
        android:id="@+id/contacts"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:padding="15dp"
        android:textSize="20sp"
        android:onClick="startContacts"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_spaces"
        android:drawableTop="@drawable/manage_workspace"
        android:id="@+id/manage_spaces"
        android:onClick="startManageWorkspace"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:padding="15dp"
        android:textSize="20sp"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:drawableTop="@drawable/settings"
        android:id="@+id/settings"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:padding="15dp"
        android:textSize="20sp"
        android:onClick="startSettings"
        android:textColor="#ffffff" />
</LinearLayout>
</ScrollView>